[metadata]
license      = Apache-2.0
license_file = LICENSE.md
platforms    = any
description  = rsync support for locust
long_description = file: README.rst
keywords     = locust, load testing
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build,enable_gevent_debugging.py
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True
